test-suite/tests/ui/input/invalid_ruleset_attribute.stderr
error: invalid attribute
 --> tests/ui/input/invalid_ruleset_attribute.rs:8:25
  |
8 |     #[stated(assert(A), unsupported)]
  |                         ^^^^^^^^^^^
